# course_work_OOP

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: connector_class.py  get_hh.py  site_api_class.py  user_util.py  vacancy_class.py
tests/: test_connector_class.py  test_site_api_class.py  test_user_util.py  test_vacancy_class.py
