[tool.poetry]
name = "vacanciesparsing"
version = "0.1.0"
description = ""
authors = ["ElizavetaAveryanova <153016425+ElizavetaAveryanova@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
